--- a/site/dataframe_py/index.html
+++ b/site/dataframe_py/index.html
@@ -313,7 +313,7 @@
 </ul>
 <h4 id="input_1">Input:</h4>
 <ul>
-<li>d_data (csv): 数据</li>
+<li>d_data (py3pkl): 数据</li>
 </ul>
 <h4 id="output_1">Output:</h4>
 <ul>
@@ -367,7 +367,7 @@
 </ul>
 <h4 id="input_4">Input:</h4>
 <ul>
-<li>d_data (csv): 数据</li>
+<li>d_data (py3pkl): 数据</li>
 </ul>
 <h4 id="output_4">Output:</h4>
 <ul>
@@ -441,7 +441,7 @@
 <h4 id="param_8">Param:</h4>
 <ul>
 <li>col (string) : 指定变量</li>
-<li>method (string) : 选择去重方法</li>
+<li>method (string) : 选择去重后保留数据方法 (first或者last)</li>
 </ul>
 <h4 id="input_8">Input:</h4>
 <ul>
